# exercise_dm

./: .gitignore  README.md  install.sh  pyproject.toml
src/exercise_dm/: settings.py
src/exercise_dm/core/: evaluate_sbert_st.py
src/exercise_dm/core/evaluation/: evaluate_concat_bert.py  evaluate_gpt2.py  evaluate_sbert_ce.py  evaluate_sbert_st.py
src/exercise_dm/core/training/: train_concat_bert.py  train_gpt2.py  train_sbert_ce.py  train_sbert_st.py
src/exercise_dm/jobs/: build_api.py  infer_concat_bert.py  infer_gpt2.py  infer_sbert_ce.py  infer_sbert_st.py  load_models.py
src/exercise_dm/utils/: map_context_code.py  measure_false_degree.py  quantize_similarity_score.py  split_test_data.py
